<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fond_bandeau">

    <TableRow
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="0.5">
        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".16"
            android:text="@string/btn_1"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".16"
            android:text="@string/btn_2"/>

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".16"
            android:text="@string/btn_3"/>

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".16"
            android:text="@string/btn_4"/>

        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".16"
            android:text="@string/btn_5"/>

        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".16"
            android:text="@string/btn_6"/>

    </TableRow>

    <TableRow
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="0.5">
        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".16"
            android:text="@string/btn_7"/>

        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".16"
            android:text="@string/btn_8"/>

        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".16"
            android:text="@string/btn_9"/>

        <Button
            android:id="@+id/btn_effacer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".16"
            android:text="@string/btn_effacer"/>

        <Button
            android:id="@+id/btn_retour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".32"
            android:text="@string/btn_ret"/>

    </TableRow>
</TableLayout>