<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--android:background="@drawable/app_logo"-->

    <Button
        android:id="@+id/btn_new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/btn_nouvelle_partie"
        android:layout_gravity="center"
        style="@style/btn_accueil"/>

    <Button
        android:id="@+id/btn_continuer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="onClick"
        android:text="@string/btn_continuer"
        android:layout_gravity="center"
        style="@style/btn_accueil"/>

    <Button
        android:id="@+id/btn_aleatoire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="onClick"
        android:text="@string/btn_aleatoire"
        android:layout_gravity="center"
        style="@style/btn_accueil"/>


</LinearLayout>