<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titre_choix_niveau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titre_choix_plateau"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/defilement_niveau"
        android:layout_below="@id/titre_choix_niveau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageButton
            android:id="@+id/btn_difficulté_moins"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"/>

        <TextView
            android:id="@+id/txt_difficulté_actuelle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="8"/>

        <ImageButton
            android:id="@+id/btn_difficulté_plus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClick"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bandeau_liste_niveau"
        android:layout_below="@id/defilement_niveau"
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:text="@string/txt_niveau"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/txt_meilleur_temps"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <ListView
        android:id="@+id/list_choix_niveau"
        android:layout_below="@id/bandeau_liste_niveau"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>

    <ProgressBar
        android:id="@+id/icone_chargement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true" />

</RelativeLayout>